--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-* {
+*{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    box-sizing: border-box ;
     text-decoration: none;
     font-family: sans-serif;
     font-size: 14px;
+
 }
 
 body {
@@ -17,7 +18,7 @@ body {
     justify-content: center;
 }
 
-.instagram-wrapper {
+.instagram-inicio {
     display: flex;
     align-items: center;
     justify-content: start;
@@ -30,60 +31,63 @@ body {
     align-items: center;
     justify-content: center;
     width: 50%;
-}
 
+}
 .instagram-phone img {
-    height: 50rem;
+height: 50rem;
 }
 
 .instagram-continue {
     display: flex;
-    align-items: center; /* horizontal */
-    justify-content: space-around; /* vertical */
+    align-items: center; /*horizontal*/
+    justify-content: space-around;
     flex-direction: column;
     width: 50%;
-    min-height: 34rem;
+    height: 34rem;
+
+
 }
 
-.group {
+.group{
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    background-color: #ffffff;
+    background-color: white;
     width: 100%;
     padding: 1.3rem 0;
     border: 1px solid lightgray;
 }
 
-.group:nth-child(1) {
+.group:nth-child(1){
     min-height: 19rem;
+
 }
 
 .instagram-logo {
     height: 3rem;
 }
 
-.profile-photo {
+.photo{
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
     overflow: hidden;
+
+}
+.photo img {
+    height: 7rem;
 }
 
-.profile-photo img {
-    height: 6rem;
-}
-
-.instagram-login {
+.instagram-login{
     background-color: #0095f6;
-    color: #ffffff;
+    color: #ffff;
     padding: 8px;
     border-radius: 4px;
 }
 
-.instagram-logout {
+.instagram-logout{
     color: #0095f6;
     margin-top: 1rem;
 }
@@ -92,7 +96,7 @@ body {
     color: rgb(160, 160, 160);
 }
 
-.link-blue {
+.link-blue{
     color: #0095f6;
 }
 
@@ -111,6 +115,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     padding: 1rem;
+
 }
 
 .app-download {
@@ -120,39 +125,35 @@ body {
 }
 
 .app-download:nth-child(1) {
-    background-image: url('./img/apple-button.png');
+    background-image: url(./img/apple-button.png);
 }
-
 .app-download:nth-child(2) {
-    background-image: url('./img/googleplay-button.png');
+    background-image: url(./img/googleplay-button.png);
 }
 
-/* media queries */
-
+/* media queries*/
 
 @media (max-width: 1024px) {
-    .instagram-wrapper {
+    .instagram-inicio{
         width: 90%;
     }
 }
 
-@media (max-width: 650px) {
-    body {
+@media (max-width: 650px){
+    body{
         background-color: #ffffff;
     }
-
-    .instagram-wrapper {
-        width: 90%;
+    .instagram-continue {
+        width: 90%;    
     }
-
-    .instagram-phone {
+    .instagram-phone{
         display: none;
     }
 
     .instagram-continue {
         width: 100%;
     }
-    
+
     .group {
         border: 1px solid transparent;
     }
